--- a/2014/scss/modules/_header.scss
+++ b/2014/scss/modules/_header.scss
@@ -12,10 +12,10 @@ header{
 
   h1{
     display: block;
-    width: 18%;
     font-weight: bold;
     padding: 5% 0% 8% 0%;
-    margin: 0 auto;
+    margin: 20px 0;
+    text-align: center;
 
     a{
       color: $red;
