--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1023,7 +1023,13 @@ header a.github {
   right: 0;
   border: none;
 }
-/* line 13, ../scss/modules/_header.scss */
+@media screen and (max-width: 800px) {
+  /* line 11, ../scss/modules/_header.scss */
+  header a.github {
+    display: none;
+  }
+}
+/* line 17, ../scss/modules/_header.scss */
 header h1 {
   display: block;
   font-weight: bold;
@@ -1031,7 +1037,7 @@ header h1 {
   margin: 20px 0;
   text-align: center;
 }
-/* line 20, ../scss/modules/_header.scss */
+/* line 24, ../scss/modules/_header.scss */
 header h1 a {
   color: #aa0000;
   display: block;
@@ -1041,11 +1047,11 @@ header h1 a {
   font-family: "bello-pro", georgia, serif;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
-/* line 29, ../scss/modules/_header.scss */
+/* line 33, ../scss/modules/_header.scss */
 header h1 a span {
   display: block;
 }
-/* line 31, ../scss/modules/_header.scss */
+/* line 35, ../scss/modules/_header.scss */
 header h1 a:before {
   content: "";
   margin: 0 auto 12px auto;
@@ -1058,7 +1064,7 @@ header h1 a:before {
   width: 84px;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 2) {
-  /* line 31, ../scss/modules/_header.scss */
+  /* line 35, ../scss/modules/_header.scss */
   header h1 a:before {
     background-image: url('../images/sprites-2x-s49afbe8350.png');
     background-size: 140px 1380px;
@@ -1067,18 +1073,18 @@ header h1 a:before {
     width: 84px;
   }
 }
-/* line 37, ../scss/modules/_header.scss */
+/* line 41, ../scss/modules/_header.scss */
 header h1 a:hover {
   color: #aa0000;
   border: none;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
-/* line 45, ../scss/modules/_header.scss */
+/* line 49, ../scss/modules/_header.scss */
 header h3 a {
   color: rgba(0, 0, 0, 0.6);
   font-weight: 700;
 }
-/* line 46, ../scss/modules/_header.scss */
+/* line 50, ../scss/modules/_header.scss */
 header h3 a:hover {
   color: #aa0000;
 }
@@ -1233,33 +1239,26 @@ header h3 a:hover {
 
 /* line 1, ../scss/modules/_nav.scss */
 nav, .page nav {
-  position: absolute;
-  top: 10px;
-  left: 10px;
   display: block;
+  position: absolute;
   text-align: center;
+  margin: 0;
+  top: 5px;
+  left: 0;
+  right: 0;
 }
-/* line 8, ../scss/modules/_nav.scss */
+/* line 10, ../scss/modules/_nav.scss */
 nav ul, .page nav ul {
   display: inline-block;
   margin: 0;
   padding: 0;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-  border-radius: 8px;
 }
-/* line 14, ../scss/modules/_nav.scss */
+/* line 15, ../scss/modules/_nav.scss */
 nav ul li, .page nav ul li {
   display: inline-block;
-  margin: 0;
-  padding: 0;
-  border-left: solid 1px rgba(0, 0, 0, 0.2);
-}
-/* line 19, ../scss/modules/_nav.scss */
-nav ul li:first-child, .page nav ul li:first-child {
-  border-left: none;
+  position: relative;
+  margin: 0 0 0 0;
+  padding: 0 8px 0 0;
 }
 /* line 21, ../scss/modules/_nav.scss */
 nav ul li:before, .page nav ul li:before {
@@ -1271,11 +1270,12 @@ nav ul li a, .page nav ul li a {
   display: block;
   padding: 0 10px;
   text-transform: lowercase;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
-/* line 29, ../scss/modules/_nav.scss */
+/* line 30, ../scss/modules/_nav.scss */
 nav ul li a:hover, .page nav ul li a:hover {
   border-bottom: none;
-  color: #aa0000;
+  text-shadow: 1px 1px 1px white;
 }
 
 /* line 2, ../scss/pages/_home.scss */
