--- a/2014/scss/modules/_header.scss
+++ b/2014/scss/modules/_header.scss
@@ -8,7 +8,11 @@ header{
 
   @media screen and (max-width: 1600px){ background-size: 100% auto; margin-bottom: 12px; }
 
-  a.github{ position: absolute; top: 0; right: 0; border: none;}
+  a.github{
+    position: absolute; top: 0; right: 0; border: none;
+
+    @media screen and (max-width: 800px){ display: none;}
+  }
 
   h1{
     display: block;
