--- a/2014/scss/modules/_nav.scss
+++ b/2014/scss/modules/_nav.scss
@@ -1,34 +1,38 @@
 nav, .page nav{
-  position: absolute;
-  top: 10px;
-  left: 10px;
   display: block;
+  position: absolute;
   text-align: center;
+  margin: 0;
+  top: 5px;
+  left: 0;
+  right: 0;
 
   ul{
     display: inline-block;
-    margin: 0; 
+    margin: 0;
     padding: 0;
-    @include border-radius(8px);
 
     li{
       display: inline-block;
-      margin: 0; padding: 0;
-      border-left: solid 1px $gray-xlight;
-
-      &:first-child{border-left: none;}
+      position: relative;
+      margin: 0 0 0 0;
+      padding: 0 8px 0 0;
 
       &:before{display: none;}
-      
+
       a{
         color: $white;
         display: block;
         padding: 0 10px;
         text-transform: lowercase;
+        @include text-shadow(1px 1px 1px rgba($black, 0.5));
 
-        &:hover{border-bottom: none; color: $red;}
+        &:hover{
+          border-bottom: none;
+          @include text-shadow(1px 1px 1px rgba($white, 1));
+        }
       }
-      
+
     }
 
   }
