Update home page; space sections evenly

--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1469,8 +1469,8 @@ ul.sponsors.silver li {
 }
 
 /* line 89, ../scss/pages/_home.scss */
-#contact {
-  margin-top: 100px;
+h3.section {
+  margin-top: 50px;
 }
 
 /* line 1, ../scss/pages/_tickets.scss */
