--- a/2014/scss/pages/_home.scss
+++ b/2014/scss/pages/_home.scss
@@ -63,7 +63,7 @@ ul.sponsors, ul.organizers{
   li{
     display: inline-block;
     width: 150px;
-    margin: 15px;
+    margin: 5px 10px;
 
     img{
       background: $white;
