--- a/2014/scss/base/_typography.scss
+++ b/2014/scss/base/_typography.scss
@@ -19,7 +19,7 @@ h2 {
 
 h3 {
 	font-size: 24px;
-	padding: 0.76em 0 .39em;
+	padding: 0.35em 0.0em 0.15em;
 	@media screen and (max-width: 900px){font-size: 16px;}
 }
 
