Add opportunity scholarship form

--- a/2014/scss/application.scss
+++ b/2014/scss/application.scss
@@ -19,6 +19,7 @@
 @import "pages/tickets";
 @import "pages/faq";
 @import "pages/badges";
+@import "pages/scholarship";
 
 @include border-box-sizing;
 
