--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1654,6 +1654,20 @@ h3.section {
   padding: 10px;
 }
 
+/* line 1, ../scss/pages/_scholarship.scss */
+.scholarship.page iframe {
+  width: 100%;
+  height: 1810px;
+  border: none !important;
+  margin: 0 auto;
+}
+@media screen and (max-width: 800px) {
+  /* line 1, ../scss/pages/_scholarship.scss */
+  .scholarship.page iframe {
+    height: 1840px;
+  }
+}
+
 /* line 14, ../scss/base/susy/_grid.scss */
 * {
   -webkit-box-sizing: border-box;
@@ -1661,17 +1675,17 @@ h3.section {
   box-sizing: border-box;
 }
 
-/* line 25, ../scss/application.scss */
+/* line 26, ../scss/application.scss */
 html {
   background: #fef0c4 url("../images/texture.png") repeat-y center center;
 }
 
-/* line 26, ../scss/application.scss */
+/* line 27, ../scss/application.scss */
 body {
   position: relative;
 }
 
-/* line 28, ../scss/application.scss */
+/* line 29, ../scss/application.scss */
 .page {
   padding: 0 20px 200px 20px;
   margin: 0 auto;
@@ -1680,16 +1694,16 @@ body {
   top: -110px;
 }
 @media screen and (max-width: 720px) {
-  /* line 28, ../scss/application.scss */
+  /* line 29, ../scss/application.scss */
   .page {
     top: -50px;
   }
 }
-/* line 37, ../scss/application.scss */
+/* line 38, ../scss/application.scss */
 .page ul {
   padding: 0;
 }
-/* line 38, ../scss/application.scss */
+/* line 39, ../scss/application.scss */
 .page li {
   position: relative;
   list-style: none;
@@ -1697,7 +1711,7 @@ body {
   padding: 0 0 0 24px;
   margin: 5px 0 0 0;
 }
-/* line 45, ../scss/application.scss */
+/* line 46, ../scss/application.scss */
 .page li:before {
   position: absolute;
   left: 0;
@@ -1706,13 +1720,13 @@ body {
   height: 24px;
   width: 24px;
 }
-/* line 54, ../scss/application.scss */
+/* line 55, ../scss/application.scss */
 .page li h3 {
   padding-top: 4px;
   font-weight: 500;
 }
 
-/* line 58, ../scss/application.scss */
+/* line 59, ../scss/application.scss */
 #event {
   margin-bottom: 3em !important;
 }
