--- a/2014/scss/pages/_home.scss
+++ b/2014/scss/pages/_home.scss
@@ -66,6 +66,7 @@ ul.sponsors {
   &.gold li{width: 350px;}
   &.silver li{width: 200px;}
   &.other li{width: 180px;}
+  &.scholarship li { width: auto;}
 }
 
 h3.section { margin-top: 50px; }
