--- a/2014/scss/pages/_scholarship.scss
+++ b/2014/scss/pages/_scholarship.scss
@@ -6,3 +6,14 @@
 
   @media screen and (max-width: 800px) { height: 1840px; }
 }
+
+.scholarship {
+  h3 {text-align: center;}
+  ul li {
+    display: inline-block;
+    width: 32%;
+
+    @media screen and (max-width: 800px) { width: 49%;}
+    @media screen and (max-width: 600px) { width: 100%;}
+  }
+}
