--- a/2014/scss/pages/_scholarship.scss
+++ b/2014/scss/pages/_scholarship.scss
@@ -11,7 +11,10 @@
   h3 {text-align: center;}
   ul li {
     display: inline-block;
+    text-align: center;
     width: 32%;
+
+    &:before { content: ''; }
 
     @media screen and (max-width: 800px) { width: 49%;}
     @media screen and (max-width: 600px) { width: 100%;}
