--- a/2014/scss/pages/_scholarship.scss
+++ b/2014/scss/pages/_scholarship.scss
@@ -1,14 +1,6 @@
-.scholarship.page iframe {
-  width: 100%;
-  height: 1810px;
-  border: none !important;
-  margin: 0 auto;
-
-  @media screen and (max-width: 800px) { height: 1840px; }
-}
-
 .scholarship {
-  h3 {text-align: center;}
+  h2, h3 {text-align: center;}
+
   ul li {
     display: inline-block;
     text-align: center;
@@ -18,5 +10,14 @@
 
     @media screen and (max-width: 800px) { width: 49%;}
     @media screen and (max-width: 600px) { width: 100%;}
+  }
+
+  iframe {
+    width: 100%;
+    height: 1810px;
+    border: none !important;
+    margin: 0 auto;
+
+    @media screen and (max-width: 800px) { height: 1840px; }
   }
 }
